--- a/Html Files/index.html
+++ b/Html Files/index.html
@@ -3,8 +3,74 @@
     <head>
         <title>Ecommerce  Website</title>
         <link rel="stylesheet" href="../CSS Files/index.css">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+
     </head>
     <body>
-        
+        <div class="header">
+        <div class="container">
+            <div class="navbar">
+                <div class="logo" >
+                    <img class="set" src="../1/logo.png" alt="Logo" width="50" height="50" >
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Products</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Contact</a></li>
+                        <li><a href="">Account</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="row">
+                <div class="col-1" >
+                    <br>
+                    <h1>Communication is at the <br> heart of ecommerce and community</h1>
+                    <p>Success is not final; failure is not fatal: <br> It is the courage to continue that counts</p>
+                    <a href="#" class="btn">Visit Us &#8594</a>
+                </div>
+                <div class="col-2">
+                    <img id="Image" src="../1/product.png" alt="">
+                </div>
+            </div>    
+        </div>
+    </div>
+
+    <!-- featured categories of products -->
+    <div class="categories" >
+        <div class="small-container">
+            <div class="row" >
+                <div class="col-3">
+                    <img src="../1/boot.PNG" alt="">
+                </div>
+                <div class="col-3">
+                    <img src="../1/jogger.PNG" alt="">
+                </div>
+                <div class="col-3">
+                    <img src="../1/chair.PNG" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
     </body>
+
+
+    <!-- --------------Featured Goods/Articles----------- -->
+    <div class="small-container">
+      <h2>Featured Articles</h2>
+      <div class="row">
+          <div class="col-4">
+              <img src="" alt="">
+              <h4>Red..</h4>
+              <p>$50.00</p>
+          </div>
+      </div>  
+    </div>
+
+
+
 </html>
