--- a/Html Files/index.html
+++ b/Html Files/index.html
@@ -8,69 +8,96 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+ 
     </head>
     <body>
         <div class="header">
-        <div class="container">
-            <div class="navbar">
-                <div class="logo" >
-                    <img class="set" src="../1/logo.png" alt="Logo" width="50" height="50" >
+            <div class="container">
+                <div class="navbar">
+                    <div class="logo" >
+                        <img class="set" src="../1/logo.png" alt="Logo" width="50" height="50" >
+                    </div>
+                    <nav>
+                        <ul>
+                            <li><a href="">Home</a></li>
+                            <li><a href="">Products</a></li>
+                            <li><a href="">About</a></li>
+                            <li><a href="">Contact</a></li>
+                            <li><a href="">Account</a></li>
+                        </ul>
+                    </nav>
                 </div>
-                <nav>
-                    <ul>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Products</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Contact</a></li>
-                        <li><a href="">Account</a></li>
-                    </ul>
-                </nav>
+                <div class="row">
+                    <div class="col-1" >
+                        <br>
+                        <h1>Communication is at the <br> heart of ecommerce and community</h1>
+                        <p>Success is not final; failure is not fatal: <br> It is the courage to continue that counts</p>
+                        <a href="#" class="btn">Visit Us &#8594</a>
+                    </div>
+                    <div class="col-2">
+                        <img id="Image" src="../1/product.png" alt="">
+                    </div>
+                </div>    
             </div>
-            <div class="row">
-                <div class="col-1" >
-                    <br>
-                    <h1>Communication is at the <br> heart of ecommerce and community</h1>
-                    <p>Success is not final; failure is not fatal: <br> It is the courage to continue that counts</p>
-                    <a href="#" class="btn">Visit Us &#8594</a>
-                </div>
-                <div class="col-2">
-                    <img id="Image" src="../1/product.png" alt="">
-                </div>
-            </div>    
         </div>
-    </div>
 
-    <!-- featured categories of products -->
-    <div class="categories" >
+        <!-- featured categories of products -->
+        <div class="categories" >
+            <div class="small-container">
+                <div class="row" >
+                    <div class="col-3">
+                        <img src="../1/boot.PNG" alt="">
+                    </div>
+                    <div class="col-3">
+                        <img src="../1/jogger.PNG" alt="">
+                    </div>
+                    <div class="col-3">
+                        <img src="../1/chair.PNG" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+         <!-- --------------Featured Goods/Articles----------- -->
         <div class="small-container">
-            <div class="row" >
-                <div class="col-3">
-                    <img src="../1/boot.PNG" alt="">
+            <h2 class="title">Featured Articles</h2>
+            <div class="row">
+                <div class="col-4">
+                    <img src="../1/kidbathrobe.PNG" alt="">
+                    <h4>White Kids Bathrobe</h4>
+                    <div class="ratings">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-o"></i>
+                    </div>
+                    <p>Rs 650.00</p>
                 </div>
-                <div class="col-3">
-                    <img src="../1/jogger.PNG" alt="">
+                <div class="col-4">
+                <img src="../1/shirt.PNG" alt="">
+                <h4>Dress Shirt For Men e</h4>
+                <div class="ratings">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
                 </div>
-                <div class="col-3">
-                    <img src="../1/chair.PNG" alt="">
-                </div>
+                <p>Rs 599.00</p>
             </div>
-        </div>
-    </div>
+            <div class="col-4">
+                <img src="../1/bag.PNG" alt="">
+                <h4>Travel Bag for Men</h4>
+                <div class="ratings">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o"></i>
+                </div>
+                <p>Rs 25,00</p>
+            </div>
+        </div>   
     </body>
-
-
-    <!-- --------------Featured Goods/Articles----------- -->
-    <div class="small-container">
-      <h2>Featured Articles</h2>
-      <div class="row">
-          <div class="col-4">
-              <img src="" alt="">
-              <h4>Red..</h4>
-              <p>$50.00</p>
-          </div>
-      </div>  
-    </div>
-
-
-
 </html>
