--- a/Html Files/index.html
+++ b/Html Files/index.html
@@ -75,29 +75,156 @@
                     <p>Rs 650.00</p>
                 </div>
                 <div class="col-4">
-                <img src="../1/shirt.PNG" alt="">
-                <h4>Dress Shirt For Men e</h4>
-                <div class="ratings">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
+                    <img src="../1/Sandal for girl.PNG" alt="">
+                    <h4>Flat Fancy Sandal for Women </h4>
+                    <div class="ratings">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-o"></i>
+                    </div>
+                    <p>Rs. 1,290</p>
                 </div>
-                <p>Rs 599.00</p>
-            </div>
-            <div class="col-4">
-                <img src="../1/bag.PNG" alt="">
-                <h4>Travel Bag for Men</h4>
-                <div class="ratings">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-o"></i>
+                <div class="col-4">
+                    <img src="../1/shirt.PNG" alt="">
+                    <h4>Dress Shirt For Men e</h4>
+                    <div class="ratings">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-o"></i>
+                    </div>
+                    <p>Rs 599.00</p>
                 </div>
-                <p>Rs 25,00</p>
+                <div class="col-4">
+                    <img src="../1/bag.PNG" alt="">
+                    <h4>Travel Bag for Men</h4>
+                    <div class="ratings">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-half-o"></i>
+                    </div>
+                    <p>Rs 25,00</p>
+                </div>
             </div>
-        </div>   
+            <h2 class="title">Modern Products</h2>
+            <div class="row">
+                <div class="col-4">
+                    <img src="../1/watch.PNG" alt="">
+                    <h4>Watch for men</h4>
+                    <div class="ratings">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-o"></i>
+                    </div>
+                    <p>Rs 400.00</p>
+                </div>
+                <div class="col-4">
+                    <img src="../1/coat.PNG" alt="">
+                    <h4>Casual Coat for Men</h4>
+                    <div class="ratings">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-o"></i>
+                    </div>
+                    <p>Rs. 3,699</p>
+                </div>
+                
+                <div class="col-4">
+                    <img src="../1/sandall.PNG" alt="">
+                    <h4>Classic Jeans for men</h4>
+                    <div class="ratings">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-half-o"></i>
+                    </div>
+                    <p>Rs. 999</p>
+                </div>
+                <div class="col-4">
+                    <img src="../1/jean pant.PNG" alt="">
+                    <h4>Classic Jeans for men</h4>
+                    <div class="ratings">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-half-o"></i>
+                    </div>
+                    <p>Rs. 999</p>
+                </div>
+                <div class="col-4">
+                    <img src="../1/baby shoes.PNG" alt="">
+                    <h4>Pari baby sandal</h4>
+                    <div class="ratings">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-half-o"></i>
+                    </div>
+                    <p>Rs.390</p>
+                </div>
+                <div class="col-4">
+                    <img src="../1/cap.PNG" alt="">
+                    <h4>Winter Beanie Ha</h4>
+                    <div class="ratings">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-half-o"></i>
+                    </div>
+                    <p>Rs. 774</p>
+                </div>
+                <div class="col-4">
+                    <img src="../1/glass.PNG" alt="">
+                    <h4>High Quality sunGlass </h4>
+                    <div class="ratings">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-half-o"></i>
+                    </div>
+                    <p>Rs. 1,149</p>
+                </div>
+                <div class="col-4">
+                    <img src="../1/chappal for women.PNG" alt="">
+                    <h4>Women Bow Summer Sandals </h4>
+                    <div class="ratings">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-half-o"></i>
+                    </div>
+                    <p>Rs. 1,669</p>
+                </div>
+            </div>   
+        </div>    
+        <!-- --------------------Reviews-------------- -->
+        <div class="testimonials" >
+            <div class="small-container">
+                <div class="row">
+                    <div class="col-3">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam ad autem quasi 
+                            blanditiis aut esse aliquam distinctio eius ut expedita deleniti 
+                            atque porro eligendi odio veniam 
+                            vero, dolor adipisci laboriosam.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
     </body>
 </html>
