--- a/Html Files/Products.html
+++ b/Html Files/Products.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Ecommerce  Website</title>
+        <title>All Products</title>
         <link rel="stylesheet" href="../CSS Files/index.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,7 +12,6 @@
  
     </head>
     <body>
-        <div class="header">
             <div class="container">
                 <div class="navbar">
                     <div class="logo" >
@@ -29,43 +28,24 @@
                     </nav>
                     <!-- <img src="../Images/menu.png" class="menu-icon"
                     onclick="menutoggle()"> -->
-                </div>
-                <div class="row">
-                    <div class="col-1" >
-                        <br>
-                        <h1>Communication is at the <br> heart of ecommerce and community</h1>
-                        <p>Success is not final; failure is not fatal: <br> It is the courage to continue that counts</p>
-                        <a href="#" class="btn">Visit Us &#8594</a>
-                    </div>
-                    <div class="col-2">
-                        <img id="Image" src="../1/product.png" alt="">
-                    </div>
                 </div>    
             </div>
-        </div>
-
-        <!-- featured categories of products -->
-        <div class="categories" >
-            <div class="small-container">
-                <div class="row" >
-                    <div class="col-3">
-                        <img src="../1/boot.PNG" alt="">
-                    </div>
-                    <div class="col-3">
-                        <img src="../1/jogger.PNG" alt="">
-                    </div>
-                    <div class="col-3">
-                        <img src="../1/chair.PNG" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-         <!-- --------------Featured Goods/Articles----------- -->
         <div class="small-container">
-            <h2 class="title">Featured Articles</h2>
+
+            <div class="row row-2">
+                <h2 class="title" style="text-align:center" >All products</h2>
+                <select>
+                    <option>Default Shorting</option>
+                    <option value="">Sort by Price</option>
+                    <option value="">Sort by popularity</option>
+                    <option value="">Sort by rating</option>
+                    <option value="">Sort by sale</option>
+                </select>
+            </div>
+
             <div class="row">
                 <div class="col-4">
-                    <img src="../1/kidbathrobe.PNG" alt="">
+                    <img src="../1/trouser.PNG" alt="">
                     <h4>White Kids Bathrobe</h4>
                     <div class="ratings">
                         <i class="fa fa-star"></i>
@@ -113,7 +93,56 @@
                     <p>Rs 25,00</p>
                 </div>
             </div>
-            <h2 class="title">Modern Products</h2>
+            <div class="row">
+                <div class="col-4">
+                    <img src="../1/girl jean.PNG" alt="">
+                    <h4>Jean's Pant for Girl</h4>
+                    <div class="ratings">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-o"></i>
+                    </div>
+                    <p>Rs 650.00</p>
+                </div>
+                <div class="col-4">
+                    <img src="../1/boot1.PNG" alt="">
+                    <h4>Flat Fancy Sandal for Women </h4>
+                    <div class="ratings">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-o"></i>
+                    </div>
+                    <p>Rs. 1,290</p>
+                </div>
+                <div class="col-4">
+                    <img src="../1/boot3.PNG" alt="">
+                    <h4>Dress Shirt For Men e</h4>
+                    <div class="ratings">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-o"></i>
+                    </div>
+                    <p>Rs 599.00</p>
+                </div>
+                <div class="col-4">
+                    <img src="../1/note book.PNG" alt="">
+                    <h4>General note book</h4>
+                    <div class="ratings">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-half-o"></i>
+                    </div>
+                    <p>Rs 100</p>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-4">
                     <img src="../1/watch.PNG" alt="">
@@ -212,138 +241,18 @@
                     </div>
                     <p>Rs. 1,669</p>
                 </div>
-            </div>   
+            </div>
+            <div class="page-btn">
+                <span>1</span>
+                <span>2</span>
+                <span>3</span>
+                <span>4</span>
+                <span>5</span>
+                <span>&#8594;</span>
+            </div>
         </div>    
-        <!-- --------------------Reviews-------------- -->
-        <div class="testimonial" >
-            <div class="small-container">
-                <h2 class="title">Reviews from clients</h2>
-                <div class="row">
-                    <div class="col-3">
-                        <i class="fa fa-quote-left"></i>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam ad autem quasi 
-                            blanditiis aut esse aliquam distinctio eius ut expedita deleniti 
-                            atque porro eligendi odio veniam 
-                            vero, dolor adipisci laboriosam.</p>
-                            <div class="ratings">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star-half-o"></i>
-                            </div>
-                            <img src="../1/user1.jpg" alt="">
-                            <h3>Elysha</h3>
-                    </div>
-                    <div class="col-3">
-                        <i class="fa fa-quote-left"></i>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam ad autem quasi 
-                            blanditiis aut esse aliquam distinctio eius ut expedita deleniti 
-                            atque porro eligendi odio veniam 
-                            vero, dolor adipisci laboriosam.</p>
-                            <div class="ratings">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star-half-o"></i>
-                            </div>
-                            <img src="../1/user2.jpg" alt="">
-                            <h3>Elysha</h3>
-                    </div>
-                    <div class="col-3">
-                        <i class="fa fa-quote-left"></i>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam ad autem quasi 
-                            blanditiis aut esse aliquam distinctio eius ut expedita deleniti 
-                            atque porro eligendi odio veniam 
-                            vero, dolor adipisci laboriosam.</p>
-                            <div class="ratings">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star-half-o"></i>
-                            </div>
-                            <img src="../1/user3.jpg" alt="">
-                            <h3>Emmery</h3>
-                    </div>
-                    <div class="col-3">
-                        <i class="fa fa-quote-left"></i>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam ad autem quasi 
-                            blanditiis aut esse aliquam distinctio eius ut expedita deleniti 
-                            atque porro eligendi odio veniam 
-                            vero, dolor adipisci laboriosam.</p>
-                            <div class="ratings">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star-half-o"></i>
-                            </div>
-                            <img src="../1/user7.png" alt="">
-                            <h3>Johan</h3>
-                    </div>
-                    <div class="col-3">
-                        <i class="fa fa-quote-left"></i>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam ad autem quasi 
-                            blanditiis aut esse aliquam distinctio eius ut expedita deleniti 
-                            atque porro eligendi odio veniam 
-                            vero, dolor adipisci laboriosam.</p>
-                            <div class="ratings">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star-half-o"></i>
-                            </div>
-                            <img src="../1/user5.png" alt="">
-                            <h3>William</h3>
-                    </div>
-                    <div class="col-3">
-                        <i class="fa fa-quote-left"></i>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam ad autem quasi 
-                            blanditiis aut esse aliquam distinctio eius ut expedita deleniti 
-                            atque porro eligendi odio veniam 
-                            vero, dolor adipisci laboriosam.</p>
-                            <div class="ratings">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star-half-o"></i>
-                            </div>
-                            <img src="../1/user6.jpg" alt="">
-                            <h3>Shakespeare</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
         
-
-        <!-- ----------------------partnership---------------------- -->
-        <div class="brands" >
-            <div class="small-container">
-                <h2 class="title">Our Partner's</h2>
-                <div class="row">
-                    <div class="col-5">
-                        <img src="../1/logo7.PNG" alt="">
-                    </div>
-                    <div class="col-5">
-                        <img src="../1/logo10.png" alt="">
-                    </div>
-                    <div class="col-5">
-                        <img src="../1/logo3.jpg" alt="">
-                    </div>
-                    <div class="col-5">
-                        <img src="../1/logo4.jpg" alt="">
-                    </div>
-                    <div class="col-5">
-                        <img src="../1/logo5.png" alt="">
-                    </div>
-
-                </div>
-            </div>
-        </div>
+        
 
         <!-- ------------------footer  ------------------ -->
 
