--- a/Html Files/Products.html
+++ b/Html Files/Products.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>All Products</title>
+        <title>ucts</title>
         <link rel="stylesheet" href="../CSS Files/index.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,7 +33,6 @@
         <div class="small-container">
 
             <div class="row row-2">
-                <h2 class="title" style="text-align:center" >All products</h2>
                 <select>
                     <option>Default Shorting</option>
                     <option value="">Sort by Price</option>
