update all files

--- a/Html Files/index.html
+++ b/Html Files/index.html
@@ -20,11 +20,12 @@
                     </div>
                     <nav>
                         <ul id="MenuItems" > 
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Products</a></li>
-                            <li><a href="">About</a></li>
+                            <li><a href="../Html Files/index.html">Home</a></li>
+                            <li><a href="../Html Files/Products.html">Products</a></li>
+                            <li><a href="../Html Files/AboutUs.html">About us</a></li>
                             <li><a href="">Contact</a></li>
-                            <li><a href="">Account</a></li>
+                            <li><a href="../Html Files/SignUp.html">SignUp</a></li>
+                            <li><a href="../Html Files/signIn.html">SignIn</a></li>
                         </ul>
                     </nav>
                     <!-- <img src="../Images/menu.png" class="menu-icon"
@@ -217,7 +218,7 @@
         <!-- --------------------Reviews-------------- -->
         <div class="testimonial" >
             <div class="small-container">
-                <h2 class="title">Reviews from clients</h2>
+                <h2 class="title">What our client Say</h2>
                 <div class="row">
                     <div class="col-3">
                         <i class="fa fa-quote-left"></i>
